<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/my_primary" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="25dp"
            android:layout_marginBottom="-20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Listing"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <!-- Spacing -->
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />
                <Button
                    android:id="@+id/addImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/add_image_button"
                    android:backgroundTint="@color/rectangle_5_color"
                    android:textColor="@color/black"
                    app:cornerRadius="15dp" />

                <!-- Spacing -->
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ItemNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name of Item"
                    app:endIconDrawable="@drawable/full_name_icon"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Spacing -->
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_box_1_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:endIconMode="none">

                    <AutoCompleteTextView
                        android:id="@+id/categoryAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:completionThreshold="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/categoryChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">
                </com.google.android.material.chip.ChipGroup>

                <!-- Spacing -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <!-- Valid Email Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ConditionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_box_2_hint"
                    app:endIconDrawable="@drawable/baseline_email_24"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Spacing -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <!-- Phone Number Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PriceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_box_3_hint"
                    app:endIconDrawable="@drawable/baseline_add_call_24"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Spacing -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <!-- Strong Password Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LocationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deal_method_checkbox_text"
                    app:endIconDrawable="@drawable/baseline_key_24"
                    app:endIconMode="custom"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Spacing -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <!-- Strong Password Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ItemDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_description_text"
                    app:endIconDrawable="@drawable/baseline_key_24"
                    app:endIconMode="custom"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>



                <!-- Spacing -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:text="Deal Method"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <RadioButton
                    android:id="@+id/MeetupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Meet-up" />

                <RadioButton
                    android:id="@+id/ShippingButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Shipping" />


                <Button
                    android:id="@+id/addItemFinished"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/my_primary"
                    app:cornerRadius="15dp"
                    android:text="Next >"
                    android:textSize="20dp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>

